crates/fig-parser/tests/snapshots/integration_tests__types__generic_path_aliases.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - TypeAlias:
      visibility: Default
      annotations: []
      name:
        segments:
          - HashMap
      generic_params:
        - Type:
            name: K
            bounds: []
            default_type: ~
        - Type:
            name: V
            bounds: []
            default_type: ~
      aliased_type:
        Path:
          path:
            segments:
              - core
              - Map
          generic_args:
            - Path:
                path:
                  segments:
                    - K
                generic_args: []
            - Path:
                path:
                  segments:
                    - V
                generic_args: []
  - TypeAlias:
      visibility: Default
      annotations: []
      name:
        segments:
          - Set
      generic_params:
        - Type:
            name: T
            bounds: []
            default_type: ~
      aliased_type:
        Path:
          path:
            segments:
              - std
              - collections
              - HashSet
          generic_args:
            - Path:
                path:
                  segments:
                    - T
                generic_args: []
