crates/fig-parser/tests/snapshots/integration_tests__types__pointer_types.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - TypeAlias:
      visibility: Default
      annotations: []
      name:
        segments:
          - RawPtr
      generic_params: []
      aliased_type:
        Pointer:
          nullable: false
          mutable: false
          element_type: U8
  - TypeAlias:
      visibility: Default
      annotations: []
      name:
        segments:
          - MutPtr
      generic_params: []
      aliased_type:
        Pointer:
          nullable: false
          mutable: true
          element_type: U8
  - TypeAlias:
      visibility: Default
      annotations: []
      name:
        segments:
          - OptPtr
      generic_params: []
      aliased_type:
        Nullable:
          Pointer:
            nullable: false
            mutable: false
            element_type: U8
  - TypeAlias:
      visibility: Default
      annotations: []
      name:
        segments:
          - OptMutPtr
      generic_params: []
      aliased_type:
        Nullable:
          Pointer:
            nullable: false
            mutable: true
            element_type: U8
  - TypeAlias:
      visibility: Default
      annotations: []
      name:
        segments:
          - PtrPtr
      generic_params: []
      aliased_type:
        Pointer:
          nullable: false
          mutable: false
          element_type:
            Pointer:
              nullable: false
              mutable: false
              element_type: U8
  - TypeAlias:
      visibility: Default
      annotations: []
      name:
        segments:
          - MutPtrPtr
      generic_params: []
      aliased_type:
        Pointer:
          nullable: false
          mutable: true
          element_type:
            Pointer:
              nullable: false
              mutable: true
              element_type: U8
