crates/fig-parser/tests/snapshots/integration_tests__types__primitive_aliases.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - TypeAlias:
      visibility: Default
      annotations: []
      name:
        segments:
          - Byte
      generic_params: []
      aliased_type: U8
  - TypeAlias:
      visibility: Default
      annotations: []
      name:
        segments:
          - Short
      generic_params: []
      aliased_type: I16
  - TypeAlias:
      visibility: Default
      annotations: []
      name:
        segments:
          - Int
      generic_params: []
      aliased_type: I32
  - TypeAlias:
      visibility: Default
      annotations: []
      name:
        segments:
          - Long
      generic_params: []
      aliased_type: I64
  - TypeAlias:
      visibility: Default
      annotations: []
      name:
        segments:
          - UInt
      generic_params: []
      aliased_type: U32
  - TypeAlias:
      visibility: Default
      annotations: []
      name:
        segments:
          - Float
      generic_params: []
      aliased_type: F32
  - TypeAlias:
      visibility: Default
      annotations: []
      name:
        segments:
          - Double
      generic_params: []
      aliased_type: F64
  - TypeAlias:
      visibility: Default
      annotations: []
      name:
        segments:
          - Bool
      generic_params: []
      aliased_type: Bool
