crates/fig-parser/tests/snapshots/integration_tests__types__slice_types.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - TypeAlias:
      visibility: Default
      annotations: []
      name:
        segments:
          - ByteSlice
      generic_params: []
      aliased_type:
        Array:
          element_type: U8
          size: ~
  - TypeAlias:
      visibility: Default
      annotations: []
      name:
        segments:
          - IntSlice
      generic_params: []
      aliased_type:
        Array:
          element_type: I32
          size: ~
  - TypeAlias:
      visibility: Default
      annotations: []
      name:
        segments:
          - BoolSlice
      generic_params: []
      aliased_type:
        Array:
          element_type: Bool
          size: ~
  - TypeAlias:
      visibility: Default
      annotations: []
      name:
        segments:
          - SliceOfSlices
      generic_params: []
      aliased_type:
        Array:
          element_type:
            Array:
              element_type: U8
              size: ~
          size: ~
